--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -18,6 +18,7 @@
 
 <!--Hola mundo-->
 <table>
+    <caption>Congresos y Eventos</caption>
     <thead>
         <th>Siglas</th>
         <th>Congreso o Evento</th>
