--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -17,6 +17,17 @@
         a:active{
             font-weight: bold;
         }
+        .columna1{
+            float: left;
+            width: 45%;
+            padding: 10px;
+        }
+
+        .columna2{
+            float: right;
+            width: 45%;
+        }
+        <!--o en vez de esos 2 .columna puedo usar article{column_count: 2; column-gap: 100px; margin: 0px, 50px;}-->
     </style>
 </head>
 <body>
@@ -30,7 +41,7 @@
     <h3 class="tituloNoticia" style="font-size: 18px">CordoBici</h3>
     Publicado el 07/03/2018 en Agropecuarias y Ambiente
     <article>
-        <div>
+        <div class="columna1">
             <p>
                 Un intercambio académico inspiró a Joaquín, Nicolás, Guido y Facundo para elegir el tema de su trabajo final.
                 Dos de ellos estuvieron el año pasado en Sevilla y se quedaron "enamorados" –palabras textuales- de su
@@ -60,7 +71,7 @@
                 de la tesis.
             </p>
         </div>
-        <div class="grid-item">
+        <div class="columna2">
             <p>
                 Gracias a una profunda investigación comercial, sumada a una simulación realizada por un programa llamado
                 anylogic, consiguieron localizar de manera estratégica 19 estaciones con 280 bicicletas, en Nueva Córdoba y
@@ -93,6 +104,7 @@
             </p>
         </div>
     </article>
+
 </section>
 
 </body>
