complete ejercicio paint

--- a/Ejercicios-JavaScript/mini_paint.html
+++ b/Ejercicios-JavaScript/mini_paint.html
@@ -6,13 +6,13 @@
     <script type="text/javascript" src="misFunciones.js"></script>
 </head>
 <body onload="cargarListener()">
-<canvas id="lienzoDibujo" width="600px" height="600px">
-
+<canvas id="canvasDibujar" class="ejer" onmousemove="dibujar(event)" width="800px" height="800px" >
 
 </canvas>
 <br>
 <button onclick="borrarCanvas()">
     Limpiar Canvas
 </button>
+
 </body>
 </html>
