--- a/Ejercicios-HTML/index.html
+++ b/Ejercicios-HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="Carolina Havenstein" name="author">
-    <meta content="html, cabeceras, etiquetas" name="keywords"
+    <meta content="html, cabeceras, etiquetas" name="keywords">
     <title>Pagina Principal</title>
 </head>
 <body>
