--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
     <title>CV Agustina Aliciardi</title>
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
     <link rel="shortcut icon" href="imagenes/favicon.jpg" type="image/x-con">
